--- a/Project Management System/nbproject/project.properties
+++ b/Project Management System/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/Project_Management_System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\ALKODS\\Desktop\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
